# lab08

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
demo/: main.cpp
examples/: example1.cpp  example2.cpp
formatter_ex_lib/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt
